fixed header/hero background image alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,9 +20,9 @@ body {
 
 header {
   background-image: url('../images/hero-bg.jpg');
-  background-size: 112%;
+  background-size: cover;
   background-attachment: fixed;
-  background-position: top;
+  background-position: 80%;
   display:flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -113,7 +113,8 @@ section {
 .hero {
   background-image: url('../images/hero-bg.jpg');
   background-size: cover;
-  background-position: center;
+  background-position: 80%;
+  background-attachment: fixed;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
